[tool.poetry]
name = "dtop"
version = "0.1.0"
description = "Top For Dask - Modeled off of the Dask Dashboard"
authors = ["Ian Baldwin <ian@iantbaldw.in>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
asciimatics = {git = "https://github.com/peterbrittain/asciimatics"}
click = "^7.1.1"
distributed = "^2.15.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
mypy = "^0.770"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
